tests/fixtures/errors/invalid_preproc_expr_missing.puml
@startuml
!if
Alice -> Bob: missing expression
!endif
@enduml
